--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/rvanderheyde/Oband",
   "dependencies": {
+    "body-parser": "^1.12.2",
     "express": "^4.12.3",
+    "mongoose": "^3.8.25",
     "morgan": "^1.5.2"
   }
 }
