--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.12.2",
     "express": "^4.12.3",
     "mongoose": "^3.8.25",
-    "morgan": "^1.5.2"
+    "morgan": "^1.5.2",
+    "socket.io": "^1.3.5"
   }
 }
