--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/rvanderheyde/Oband",
   "dependencies": {
     "body-parser": "^1.12.2",
+    "echojs": "^0.1.4",
     "express": "^4.12.3",
     "mongoose": "^3.8.25",
     "morgan": "^1.5.2",
