--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.12.3",
     "mongoose": "^3.8.25",
     "morgan": "^1.5.2",
-    "socket.io": "^1.3.5"
+    "socket.io": "^1.3.5",
+    "soundcloud-node": "0.0.10"
   }
 }
