--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.12.2",
     "echojs": "^0.1.4",
     "express": "^4.12.3",
+    "express-handlebars": "^2.0.0",
     "mongoose": "^3.8.25",
     "morgan": "^1.5.2",
     "socket.io": "^1.3.5"
