--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
   "homepage": "https://github.com/rvanderheyde/Oband",
   "dependencies": {
     "body-parser": "^1.12.2",
+    "cookie-parser": "^1.3.4",
     "echojs": "^0.1.4",
     "express": "^4.12.3",
     "express-handlebars": "^2.0.0",
+    "express-session": "^1.11.1",
     "mongoose": "^3.8.25",
     "morgan": "^1.5.2",
+    "passport": "^0.2.1",
+    "passport-facebook": "^2.0.0",
     "socket.io": "^1.3.5"
   }
 }
